--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: RED Starter Theme
+Theme Name: Culture Saves Lives Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
+Author: Aaron, Ian, Jenny, Kenny
 Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Description: A WordPress theme for the Culture Saves Lives website.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
