--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1,9 +1,9 @@
 /*!
-Theme Name: Culture Saves Lives
+Theme Name: Culture Saves Lives Theme
 Theme URI: http://underscores.me/
 Author: Aaron, Ian, Jenny, Kenny
-Author URI: https://github.com/redacademy/csl-fall-2017
-Description: Custom theme for the Culture Saves Lives site.
+Author URI: http://www.redacademy.com
+Description: A WordPress theme for the Culture Saves Lives website.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
