--- a/themes/csl/sass/_variables.scss
+++ b/themes/csl/sass/_variables.scss
@@ -19,6 +19,12 @@ $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
+$black:#000000;
+$white:#ffffff;
+$yellow:#FFCB33;
+$teal:#1DAFB8;
+$red:#D91F18;
+
 // Typography
 
 $font__main: sans-serif;
