--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1,15 +1,9 @@
 /*!
 Theme Name: Culture Saves Lives Theme
 Theme URI: http://underscores.me/
-<<<<<<< HEAD
 Author: Aaron, Ian, Jenny, Kenny
 Author URI: http://www.redacademy.com
 Description: A WordPress theme for the Culture Saves Lives website.
-=======
-Author: RED Academy
-Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
->>>>>>> temporary saving files
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -607,6 +601,79 @@ a {
 
 .bypostauthor {
   display: block; }
+
+/* MOBILE MENU	*/
+.navigation {
+  width: auto;
+  position: fixed;
+  z-index: 1;
+  top: 10;
+  left: 0;
+  background-color: #1DAFB8;
+  box-shadow: 0 4px 4px -3px #232323;
+  -moz-box-shadow: 0 4px 4px -3px #232323;
+  -webkit-box-shadow: 0 4px 4px -3px #232323;
+  overflow: hidden;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  padding-top: 0px; }
+
+.navigation a {
+  text-decoration: none; }
+
+/*	MENU ITEMS	 */
+.navigation ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-left: 1rem;
+  margin-top: 2rem;
+  text-align: center;
+  list-style: none; }
+
+.menulist {
+  width: 200px; }
+
+.logo {
+  text-align: center;
+  margin: 0 auto; }
+
+.line1, .line2, .line3 {
+  margin-top: 5px;
+  background-color: black;
+  width: 25px;
+  height: 3px;
+  display: block;
+  position: relative;
+  opacity: 1.0;
+  border-radius: 15%;
+  -webkit-transition: all .3s;
+  transition: all .3s; }
+
+.line1.active {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  opacity: 0.0;
+  background-color: black;
+  top: 5px; }
+
+.line2.active {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  background-color: black; }
+
+.line3.active {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  background-color: black;
+  top: -7px; }
 
 /*--------------------------------------------------------------
 # Media
