added top  margin to mobile menu

--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -616,24 +616,22 @@ a {
   transition: all .3s; }
 
 .toggle-open {
-  background: none;
+  background: white;
   position: absolute;
-  top: 0;
-  left: 5;
-  line-height: 45px;
+  top: 15%;
   color: black;
   height: 3.5rem;
   z-index: 9999; }
 
 .mobile-menu {
-  margin-top: 2rem;
   z-index: 2;
   font-size: 1rem;
-  width: 50%;
-  height: 80%;
-  background: teal;
+  width: 85%;
+  height: 75%;
+  background: #1DAFB8;
   position: absolute;
-  text-align: center; }
+  text-align: left;
+  padding-left: 1rem; }
 
 .mobile-menu ul {
   margin: 0;
@@ -641,8 +639,7 @@ a {
 
 .mobile-menu li {
   display: block;
-  padding: 1rem 0 1rem 0;
-  border-bottom: #dddddd 1px solid; }
+  padding: 1rem 0 1rem 0; }
 
 .mobile-menu ul li a {
   text-decoration: none;
