styled footer for mobile, need to add redirect to actual links

--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -128,3 +128,52 @@ header{
 	background-color:black;
 	top:-7px;
 }
+
+
+// footer //
+.site-info{
+	background:$black;
+}
+.footer-nav{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	list-style: none;
+	margin-top:2rem;
+	margin-left: 1rem;
+	margin-right: -6rem;
+	height:35vw;
+	padding-top:2rem;
+	font-size: 1.25rem;
+	a{
+		color:white;
+	}
+}
+.footer-container{
+	display:flex;
+}
+.footer-logo-container{
+	background:url("../../images/footer-icon.png");
+	border-radius: 50%;
+	flex-basis:33%;
+	height: 15vw;
+	background-color: white;
+	background-size: 60px;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin-left:3.5rem;
+	margin-top:3rem;
+}
+.footer-contact-info{
+	color:white;
+	margin-left: 3rem;
+	width: 80%;
+	border-left: 1px solid white;
+	padding-left: 2rem;
+}
+
+
+// white radius
+// background: white;
+// border-radius: 50%;
+// width: 21%;
