--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -603,48 +603,6 @@ a {
   display: block; }
 
 /* MOBILE MENU	*/
-.navigation {
-  width: auto;
-  position: fixed;
-  z-index: 1;
-  top: 10;
-  left: 0;
-  background-color: #1DAFB8;
-  box-shadow: 0 4px 4px -3px #232323;
-  -moz-box-shadow: 0 4px 4px -3px #232323;
-  -webkit-box-shadow: 0 4px 4px -3px #232323;
-  overflow: hidden;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  padding-top: 0px; }
-
-.navigation a {
-  text-decoration: none; }
-
-/*	MENU ITEMS	 */
-.navigation ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  margin-left: 1rem;
-  margin-top: 2rem;
-  text-align: center;
-  list-style: none; }
-
-.menulist {
-  width: 200px; }
-
-.logo {
-  text-align: center;
-  margin: 0 auto; }
-
 .line1, .line2, .line3 {
   margin-top: 5px;
   background-color: black;
@@ -657,7 +615,47 @@ a {
   -webkit-transition: all .3s;
   transition: all .3s; }
 
-.line1.active {
+.toggle-open {
+  background: white;
+  position: absolute;
+  top: 15%;
+  color: black;
+  height: 3.5rem;
+  z-index: 9999; }
+
+.mobile-menu {
+  margin-top: 2rem;
+  z-index: 2;
+  font-size: 1rem;
+  width: 85%;
+  height: 75%;
+  background: #1DAFB8;
+  position: absolute;
+  text-align: left;
+  padding-left: 1rem; }
+
+.mobile-menu ul {
+  margin: 0;
+  padding: 0; }
+
+.mobile-menu li {
+  display: block;
+  padding: 1rem 0 1rem 0; }
+
+.mobile-menu ul li a {
+  text-decoration: none;
+  margin: 0px;
+  color: white; }
+
+.mobile-menu a {
+  text-decoration: none;
+  color: white; }
+
+header {
+  display: inline-block;
+  font-size: 12px; }
+
+.line1.toggle-open {
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
   opacity: 0.0;
@@ -674,6 +672,54 @@ a {
           transform: rotate(-45deg);
   background-color: black;
   top: -7px; }
+
+.site-info {
+  background: #000000; }
+
+.footer-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: -6rem;
+  height: 35vw;
+  padding-top: 2rem;
+  font-size: 1.25rem; }
+  .footer-nav a {
+    color: white; }
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.footer-logo-container {
+  background: url("../../images/footer-icon.png");
+  border-radius: 50%;
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
+  height: 15vw;
+  background-color: white;
+  background-size: 60px;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-left: 3.5rem;
+  margin-top: 3rem; }
+
+.footer-contact-info {
+  color: white;
+  margin-left: 3rem;
+  width: 80%;
+  border-left: 1px solid white;
+  padding-left: 2rem; }
 
 /*--------------------------------------------------------------
 # Media
