footer was broken, made it responsive

--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -135,13 +135,13 @@ header{
 	background:$black;
 }
 .footer-nav{
+	margin: 0;
+	padding-left: 0;
+	align-items: center;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	list-style: none;
-	margin-top:2rem;
-	margin-left: 1rem;
-	margin-right: -6rem;
 	height:35vw;
 	padding-top:2rem;
 	font-size: 1.25rem;
@@ -151,29 +151,33 @@ header{
 }
 .footer-container{
 	display:flex;
+	position: relative;
+	padding-top:2rem;
 }
 .footer-logo-container{
+	position: absolute;
 	background:url("../../images/footer-icon.png");
 	border-radius: 50%;
-	flex-basis:33%;
-	height: 15vw;
+	width: 65px;
+	height: 50px;
 	background-color: white;
-	background-size: 60px;
+	background-size: 50px;
 	background-position: center;
 	background-repeat: no-repeat;
-	margin-left:3.5rem;
-	margin-top:3rem;
+	margin-left:14%;
+	align-self:center;
 }
 .footer-contact-info{
+	display:flex;
+	flex-direction: column;
 	color:white;
-	margin-left: 3rem;
-	width: 80%;
+	margin-left: 46%;
 	border-left: 1px solid white;
-	padding-left: 2rem;
+	padding-left: 1rem;
+	p:nth-child(1){
+		margin:0;
+	}
+	p:nth-child(2){
+		margin:0;
+	}
 }
-
-
-// white radius
-// background: white;
-// border-radius: 50%;
-// width: 21%;
