--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -53,7 +53,7 @@
 
 .line1, .line2, .line3 {
 	margin-top:5px;
-	background-color:black;
+	background-color:white;
 	width:25px;
 	height:3px;
 	display:block;
@@ -62,18 +62,20 @@
 	border-radius:15%;
 	transition: all .3s;
 }	
-
+.menu-toggle{
+	display:none;
+}
 .toggle-open{
-	background:white;
+	box-shadow: none;
+	border: none;
+	background:none;
 	position:absolute;
 	top:15%;
-	color:black;
 	height:3.5rem;
 	z-index:9999;
 }
 
 .mobile-menu{
-	margin-top:2rem;
 	z-index:2; 
 	font-size:1rem;
 	width:85%; 
@@ -176,8 +178,27 @@ header{
 	padding-left: 1rem;
 	p:nth-child(1){
 		margin:0;
+		font-weight:bold;
 	}
 	p:nth-child(2){
 		margin:0;
+		font-weight:lighter;
 	}
+}
+
+
+// header//
+.site-header{
+	width: 100%;
+	background: black;
+	height: 20vw;
+	position: relative;
+}
+
+.header-logo{
+	height: 150px;
+	width: 100%;
+	position: fixed;
+	top: 2%;
+	z-index: 99;
 }
