--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -356,21 +356,12 @@ input[type="submit"] {
   border-color: #ccc #ccc #bbb;
   border-radius: 3px;
   background: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
   color: rgba(0, 0, 0, 0.8);
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1;
   padding: .6rem 1rem .4rem;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); }
-  button:hover,
-  input[type="button"]:hover,
-  input[type="reset"]:hover,
-  input[type="submit"]:hover {
-    border-color: #ccc #bbb #aaa;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02); }
   button:active, button:focus,
   input[type="button"]:active,
   input[type="button"]:focus,
@@ -605,7 +596,7 @@ a {
 /* MOBILE MENU	*/
 .line1, .line2, .line3 {
   margin-top: 5px;
-  background-color: black;
+  background-color: white;
   width: 25px;
   height: 3px;
   display: block;
@@ -615,16 +606,20 @@ a {
   -webkit-transition: all .3s;
   transition: all .3s; }
 
+.menu-toggle {
+  display: none; }
+
 .toggle-open {
-  background: white;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  background: none;
   position: absolute;
   top: 15%;
-  color: black;
   height: 3.5rem;
   z-index: 9999; }
 
 .mobile-menu {
-  margin-top: 2rem;
   z-index: 2;
   font-size: 1rem;
   width: 85%;
@@ -732,9 +727,24 @@ header {
   border-left: 1px solid white;
   padding-left: 1rem; }
   .footer-contact-info p:nth-child(1) {
-    margin: 0; }
+    margin: 0;
+    font-weight: bold; }
   .footer-contact-info p:nth-child(2) {
-    margin: 0; }
+    margin: 0;
+    font-weight: lighter; }
+
+.site-header {
+  width: 100%;
+  background: black;
+  height: 20vw;
+  position: relative; }
+
+.header-logo {
+  height: 150px;
+  width: 100%;
+  position: fixed;
+  top: 2%;
+  z-index: 99; }
 
 /*--------------------------------------------------------------
 # Media
