--- a/themes/csl/sass/_forms.scss
+++ b/themes/csl/sass/_forms.scss
@@ -54,9 +54,21 @@ input[type="url"],
 input[type="password"],
 input[type="search"] {
 	padding: 3px;
+	width:100%;
+	height:3rem;
 }
 
 textarea {
 	padding-left: 3px;
 	width: 100%;
+}
+
+.wpcf7-form{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	
+	p:nth-child(7){
+		text-align:right;
+	}
 }
