--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -396,11 +396,20 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-  padding: 3px; }
+  padding: 3px;
+  width: 100%;
+  height: 3rem; }
 
 textarea {
   padding-left: 3px;
   width: 100%; }
+
+.wpcf7-form {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto; }
+  .wpcf7-form p:nth-child(7) {
+    text-align: right; }
 
 /*--------------------------------------------------------------
 # Navigation
