--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -848,3 +848,23 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.hero-container {
+  background: url(../../images/csl-hero.png);
+  background-size: 140%;
+  height: 60vh;
+  position: relative; }
+  .hero-container img {
+    position: absolute;
+    height: 55px;
+    bottom: 3vh;
+    left: 5vw; }
+
+@media screen and (min-width: 1024px) {
+  .hero-container {
+    background-size: 100%;
+    height: 85vh; }
+    .hero-container img {
+      height: 170px;
+      top: 4vh;
+      right: 4vw;
+      left: auto; } }
