--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -1,11 +1,9 @@
-
 //** Hero Image **//
 .hero-container {
   background: url(../../images/csl-hero.png);
-  background-size: 140%;
-  height: 60vh;
+  background-size: cover;
+  height: 40vh;
   position: relative;
-
   img {
     position: absolute;
     height: 55px;
@@ -14,16 +12,13 @@
   }
 }
 
-@media screen and (min-width: 1024px){
-
-  .hero-container{
-  background-size: 100%;
-  height: 85vh;
-
+@media screen and (min-width: 1024px) {
+  .hero-container {
+    height: 85vh;
     img {
-      height: 170px;
-      top: 4vh;
-      right: 4vw;
+      height: 25%;
+      top: 4%;
+      right: 4%;
       left: auto;
     }
   }
