--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -850,8 +850,8 @@ object {
 /* Front page */
 .hero-container {
   background: url(../../images/csl-hero.png);
-  background-size: 140%;
-  height: 60vh;
+  background-size: cover;
+  height: 40vh;
   position: relative; }
   .hero-container img {
     position: absolute;
@@ -861,10 +861,9 @@ object {
 
 @media screen and (min-width: 1024px) {
   .hero-container {
-    background-size: 100%;
     height: 85vh; }
     .hero-container img {
-      height: 170px;
-      top: 4vh;
-      right: 4vw;
+      height: 25%;
+      top: 4%;
+      right: 4%;
       left: auto; } }
