--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -239,3 +239,22 @@ header{
 .header-teal{
 	background:$teal;
 }
+
+
+// contact page //
+
+.wpcf7-form{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	
+	p:nth-child(7){
+		text-align:right;
+	}
+}
+.mapp-layout{
+	width:90%;
+}
+.widget-area{
+	display:none;
+}
