--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -411,6 +411,9 @@ textarea {
   .wpcf7-form p:nth-child(7) {
     text-align: right; }
 
+.mapp-layout {
+  width: 90%; }
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
@@ -792,6 +795,19 @@ header {
 
 .header-teal {
   background: #1DAFB8; }
+
+.wpcf7-form {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto; }
+  .wpcf7-form p:nth-child(7) {
+    text-align: right; }
+
+.mapp-layout {
+  width: 90%; }
+
+.widget-area {
+  display: none; }
 
 /*--------------------------------------------------------------
 # Media
