--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -23,3 +23,11 @@
     }
   }
 }
+
+//** Mission **//
+
+article {
+  background: url(../../images/mobile-front-bg.png);
+  background-size: cover;
+  height: 88vh;
+}
