--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1028,3 +1028,8 @@ object {
       top: 4%;
       right: 4%;
       left: auto; } }
+
+article {
+  background: url(../../images/mobile-front-bg.png);
+  background-size: cover;
+  height: 88vh; }
