--- a/themes/csl/sass/_navigation.scss
+++ b/themes/csl/sass/_navigation.scss
@@ -32,7 +32,7 @@ a {
 	width: 100%;
 
 	ul {
-		display: none;
+		// display: none;
 		list-style: none;
 		padding-left: 0;
 
@@ -103,9 +103,9 @@ a {
 	.menu-toggle {
 		display: none;
 	}
-	.main-navigation ul {
-		display: block;
-	}
+	// .main-navigation ul {
+	// 	display: block;
+	// }
 }
 
 .comment-navigation,
