--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -425,7 +425,6 @@ a {
   display: block;
   width: 100%; }
   .main-navigation ul {
-    display: none;
     list-style: none;
     padding-left: 0; }
     .main-navigation ul ul {
@@ -461,9 +460,7 @@ a {
 
 @media screen and (min-width: 768px) {
   .menu-toggle {
-    display: none; }
-  .main-navigation ul {
-    display: block; } }
+    display: none; } }
 
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
@@ -658,7 +655,9 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between; }
   .main-navigation .social-icons {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-item-align: center;
         align-self: center;
     margin-top: 2rem;
@@ -790,6 +789,9 @@ header {
   height: 5.75rem;
   position: relative; }
 
+.header-teal {
+  background: #1DAFB8; }
+
 .header-logo {
   height: 40px;
   width: 135px;
@@ -800,8 +802,50 @@ header {
   left: 25%;
   right: 25%; }
 
-.header-teal {
-  background: #1DAFB8; }
+.desktop-site-header {
+  display: none; }
+
+.menu-menu-1-container {
+  visibility: hidden; }
+
+@media screen and (min-width: 1024px) {
+  .site-header {
+    display: none; }
+  .desktop-site-header {
+    display: block;
+    width: 100%;
+    background: black;
+    height: 5.75rem;
+    position: relative; }
+  .desktop-header-logo {
+    position: absolute;
+    height: 5rem;
+    padding-top: 1rem; }
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    width: 56vw;
+    margin: 0; }
+    .menu li a {
+      color: white;
+      text-transform: uppercase; }
+  .menu-menu-1-container {
+    visibility: visible;
+    max-width: 60%;
+    -ms-flex-preferred-size: 90%;
+        flex-basis: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 1.25rem;
+    margin-left: auto; } }
 
 .page-template-contact .wpcf7-form {
   background: url("../../images/contact-form-background.png");
