--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -511,3 +511,61 @@ header{
 		}
 	}
 }
+
+//weekly events//
+.term-weekly{
+	.site-main{
+		margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+	}
+	.type-event{
+		display: flex;
+    justify-content: center;
+    align-items: center;
+		width: 100%;
+		height: 220px;
+		margin: 1rem 0 1rem 0;
+	}
+	.entry-title{
+		display: flex;
+    justify-content: center;
+    align-items: center;
+		height:100px;
+		flex-basis: 90%;
+		color:white;
+		background:$teal;
+	}
+	.entry-title:hover{
+		opacity: 0;
+	}
+	.entry-content{
+		display:flex;
+		flex-direction: column;
+		margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+		color:white;
+		display: none;
+	}
+
+	.entry-title{
+		nth:child(1n+3){
+			background-color:red;
+		}
+	}
+	@media screen  and (min-width:1024px){
+		.site-main{
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+		.type-event{
+			flex-basis:49%;
+			height:50vw;
+		}
+		.entry-content{
+			font-size:1.5rem;
+		}
+	}
+}
