--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -1,33 +1,33 @@
-//** Hero Image **//
-.hero-container {
-  background: url(../../images/csl-hero.png);
-  background-size: cover;
-  height: 40vh;
-  position: relative;
-  img {
-    position: absolute;
-    height: 55px;
-    bottom: 3vh;
-    left: 5vw;
-  }
-}
+// //** Hero Image **//
+// .hero-container {
+//   background: url(../../images/csl-hero.png);
+//   background-size: cover;
+//   height: 40vh;
+//   position: relative;
+//   img {
+//     position: absolute;
+//     height: 55px;
+//     bottom: 3vh;
+//     left: 5vw;
+//   }
+// }
 
-@media screen and (min-width: 1024px) {
-  .hero-container {
-    height: 85vh;
-    img {
-      height: 25%;
-      top: 4%;
-      right: 4%;
-      left: auto;
-    }
-  }
-}
+// @media screen and (min-width: 1024px) {
+//   .hero-container {
+//     height: 85vh;
+//     img {
+//       height: 25%;
+//       top: 4%;
+//       right: 4%;
+//       left: auto;
+//     }
+//   }
+// }
 
-//** Mission **//
+// //** Mission **//
 
-article {
-  background: url(../../images/mobile-front-bg.png);
-  background-size: cover;
-  height: 88vh;
-}
+// article {
+//   background: url(../../images/mobile-front-bg.png);
+//   background-size: cover;
+//   height: 88vh;
+// }
