--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -624,10 +624,11 @@ a {
   text-align: left; }
 
 .mobile-menu ul {
+  text-transform: uppercase;
   margin: 0;
   padding: 0; }
   .mobile-menu ul li:nth-child(odd) {
-    background: #18949a; }
+    background-color: #18949a; }
 
 .mobile-menu li {
   display: block;
@@ -1020,7 +1021,7 @@ header {
     width: 39% !important;
     position: absolute;
     left: 36%;
-    top: -61%; }
+    top: -48%; }
   .page-template-contact .social-info {
     height: 50%;
     width: auto;
@@ -1035,6 +1036,78 @@ header {
     margin-top: 2rem; }
   .page-template-contact .address-province {
     margin-top: 2rem; } }
+
+.term-weekly .site-main {
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%; }
+
+.term-weekly .type-event {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 220px;
+  margin: 1rem 0 1rem 0; }
+
+.term-weekly .entry-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100px;
+  -ms-flex-preferred-size: 90%;
+      flex-basis: 90%;
+  color: white;
+  background: #1DAFB8; }
+
+.term-weekly .entry-title:hover {
+  opacity: 0; }
+
+.term-weekly .entry-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  color: white;
+  display: none; }
+
+.term-weekly .entry-title nth:child(1n+3) {
+  background-color: red; }
+
+@media screen and (min-width: 1024px) {
+  .term-weekly .site-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .term-weekly .type-event {
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
+    height: 50vw; }
+  .term-weekly .entry-content {
+    font-size: 1.5rem; } }
 
 /*--------------------------------------------------------------
 # Media
@@ -1100,27 +1173,3 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.hero-container {
-  background: url(../../images/csl-hero.png);
-  background-size: cover;
-  height: 40vh;
-  position: relative; }
-  .hero-container img {
-    position: absolute;
-    height: 55px;
-    bottom: 3vh;
-    left: 5vw; }
-
-@media screen and (min-width: 1024px) {
-  .hero-container {
-    height: 85vh; }
-    .hero-container img {
-      height: 25%;
-      top: 4%;
-      right: 4%;
-      left: auto; } }
-
-article {
-  background: url(../../images/mobile-front-bg.png);
-  background-size: cover;
-  height: 88vh; }
