--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1054,7 +1054,8 @@ header {
           align-items: center;
   width: 100%;
   height: 220px;
-  margin: 1rem 0 1rem 0; }
+  margin: 1rem 0 1rem 0;
+  background-size: cover; }
 
 .term-weekly .entry-title {
   display: -webkit-box;
@@ -1091,6 +1092,14 @@ header {
 
 .term-weekly .entry-title nth:child(1n+3) {
   background-color: red; }
+
+.term-weekly .hover {
+  display: none; }
+
+.term-weekly .display {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 @media screen and (min-width: 1024px) {
   .term-weekly .site-main {
